examples/baas-minikube-setup/baas-openshift-example.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: baas-state
  name: baas-state
spec:
  replicas: 2
  selector:
    matchLabels:
      app: baas-state
  template:
    metadata:
      labels:
        app: baas-state
        actorSystemName: BaaS
    spec:
      serviceAccountName: hyperloop
      containers:
        - name: baas-state
          image: apollo.docker.ing.net/baas-minikube-state:3.0.2-SNAPSHOT
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8558
          livenessProbe:
            httpGet:
              path: /health/alive
              port: 8558
          ports:
            # akka remoting
            - name: remoting
              containerPort: 2552
              protocol: TCP
            # akka-management and bootstrap
            - name: management
              containerPort: 8558
              protocol: TCP
            - name: webaccess
              containerPort: 8080
              protocol: TCP
      imagePullSecrets:
        - name: apollo
          #namespace
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: baas-interactions
  name: baas-interactions
spec:
  replicas: 1
  selector:
    matchLabels:
      app: baas-interactions
  template:
    metadata:
      labels:
        app: baas-interactions
        actorSystemName: BaaS
    spec:
      serviceAccountName: hyperloop
      containers:
        - name: baas-interactions
          image: apollo.docker.ing.net/baas-minikube-interactions:3.0.2-SNAPSHOT
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8558
          livenessProbe:
            httpGet:
              path: /health/alive
              port: 8558
          ports:
            # akka remoting
            - name: remoting
              containerPort: 2552
              protocol: TCP
            # akka-management and bootstrap
            - name: management
              containerPort: 8558
              protocol: TCP
          #namespace
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: baas-event-listener
  name: baas-event-listener
spec:
  replicas: 1
  selector:
    matchLabels:
      app: baas-event-listener
  template:
    metadata:
      labels:
        app: baas-event-listener
        actorSystemName: BaaS
    spec:
      serviceAccountName: hyperloop
      containers:
        - name: baas-event-listener
          image: apollo.docker.ing.net/baas-minikube-event-listener:3.0.2-SNAPSHOT
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8558
          livenessProbe:
            httpGet:
              path: /health/alive
              port: 8558
          ports:
            # akka remoting
            - name: remoting
              containerPort: 2552
              protocol: TCP
            # akka-management and bootstrap
            - name: management
              containerPort: 8558
              protocol: TCP
          #namespace
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: client-app
  name: client-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-app
  template:
    metadata:
      labels:
        app: client-app
    spec:
      serviceAccountName: hyperloop
      containers:
        - name: client-app
          image: apollo.docker.ing.net/baas-client-example:3.0.2-SNAPSHOT
          imagePullPolicy: Never
          readinessProbe:
            httpGet:
              path: /api
              port: 8080
          livenessProbe:
            httpGet:
              path: /api
              port: 8080
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
---

#apiVersion: v1
#kind: Service
#metadata:
#  name: baas-state-service
#  labels:
#    run: baas-state-service
#spec:
#  selector:
#    app: baas-state
#  ports:
#    - port: 8080
#      protocol: TCP
#  type: LoadBalancer
#---

#apiVersion: v1
#kind: Service
#metadata:
#  name: client-app-service
#  labels:
#    run: client-app-service
#spec:
#  selector:
#    app: client-app
#  ports:
#    - port: 8080
#      protocol: TCP
#  type: LoadBalancer
