examples/baas-minikube-setup/akka-cluster.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: baas-state
  name: baas-state
spec:
  replicas: 2
  selector:
    matchLabels:
      app: baas-state
  template:
    metadata:
      labels:
        app: baas-state
        actorSystemName: BaaS
    spec:
      containers:
        - name: baas-state
          image: apollo.docker.ing.net/baas-minikube-state:3.0.2-SNAPSHOT
          imagePullPolicy: Never
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8558
          livenessProbe:
            httpGet:
              path: /health/alive
              port: 8558
          ports:
            # akka remoting
            - name: remoting
              containerPort: 2552
              protocol: TCP
            # akka-management and bootstrap
            - name: management
              containerPort: 8558
              protocol: TCP
            - name: webaccess
              containerPort: 8080
              protocol: TCP
          #namespace
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: baas-interactions
  name: baas-interactions
spec:
  replicas: 1
  selector:
    matchLabels:
      app: baas-interactions
  template:
    metadata:
      labels:
        app: baas-interactions
        actorSystemName: BaaS
    spec:
      containers:
        - name: baas-interactions
          image: apollo.docker.ing.net/baas-minikube-interactions:3.0.2-SNAPSHOT
          imagePullPolicy: Never
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8558
          livenessProbe:
            httpGet:
              path: /health/alive
              port: 8558
          ports:
            # akka remoting
            - name: remoting
              containerPort: 2552
              protocol: TCP
            # akka-management and bootstrap
            - name: management
              containerPort: 8558
              protocol: TCP
          #namespace
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: baas-event-listener
  name: baas-event-listener
spec:
  replicas: 1
  selector:
    matchLabels:
      app: baas-event-listener
  template:
    metadata:
      labels:
        app: baas-event-listener
        actorSystemName: BaaS
    spec:
      containers:
        - name: baas-event-listener
          image: apollo.docker.ing.net/baas-minikube-event-listener:3.0.2-SNAPSHOT
          imagePullPolicy: Never
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8558
          livenessProbe:
            httpGet:
              path: /health/alive
              port: 8558
          ports:
            # akka remoting
            - name: remoting
              containerPort: 2552
              protocol: TCP
            # akka-management and bootstrap
            - name: management
              containerPort: 8558
              protocol: TCP
          #namespace
---

apiVersion: v1
kind: Service
metadata:
  name: baas-state-service
  labels:
    run: baas-state-service
spec:
  selector:
    app: baas-state
  ports:
    - port: 8080
      protocol: TCP
  type: LoadBalancer

# Run this command to expose the service to minikube
# minikube service baas-state-service
