examples/baas-minikube-setup/baas-kubernetes-example.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: reserve-items
  name: reserve-items
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reserve-items
  template:
    metadata:
      labels:
        app: reserve-items
    spec:
      containers:
        - name: baas-interactions
          image: reserve-items:3.0.2-SNAPSHOT
          imagePullPolicy: Never
          readinessProbe:
            httpGet:
              path: /api/v3/health
              port: 8080
          livenessProbe:
            httpGet:
              path: /api/v3/health
              port: 8080
          ports:
            # akka remoting
            - name: http
              containerPort: 8080
              protocol: TCP
          #namespace
---

apiVersion: v1
kind: Service
metadata:
  name: reserve-items-interaction-service
  labels:
    baas-component: remote-interaction
    run: reserve-items-interaction-service
spec:
  selector:
    app: reserve-items
  ports:
    - port: 8080
      protocol: TCP
  type: LoadBalancer

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ship-items
  name: ship-items
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ship-items
  template:
    metadata:
      labels:
        app: ship-items
    spec:
      containers:
        - name: baas-interactions
          image: ship-items:3.0.2-SNAPSHOT
          imagePullPolicy: Never
          readinessProbe:
            httpGet:
              path: /api/v3/health
              port: 8080
          livenessProbe:
            httpGet:
              path: /api/v3/health
              port: 8080
          ports:
            # akka remoting
            - name: http
              containerPort: 8080
              protocol: TCP
          #namespace
---

apiVersion: v1
kind: Service
metadata:
  name: ship-items-interaction-service
  labels:
    baas-component: remote-interaction
    run: ship-items-interaction-service
spec:
  selector:
    app: ship-items
  ports:
    - port: 8080
      protocol: TCP
  type: LoadBalancer

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: make-payment
  name: make-payment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: make-payment
  template:
    metadata:
      labels:
        app: make-payment
    spec:
      containers:
        - name: baas-interactions
          image: make-payment:3.0.2-SNAPSHOT
          imagePullPolicy: Never
          readinessProbe:
            httpGet:
              path: /api/v3/health
              port: 8080
          livenessProbe:
            httpGet:
              path: /api/v3/health
              port: 8080
          ports:
            # akka remoting
            - name: http
              containerPort: 8080
              protocol: TCP
          #namespace
---

apiVersion: v1
kind: Service
metadata:
  name: make-payment-interaction-service
  labels:
    baas-component: remote-interaction
    run: make-payment-interaction-service
spec:
  selector:
    app: make-payment
  ports:
    - port: 8080
      protocol: TCP
  type: LoadBalancer

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: baas-event-listener
  name: baas-event-listener
spec:
  replicas: 1
  selector:
    matchLabels:
      app: baas-event-listener
  template:
    metadata:
      labels:
        app: baas-event-listener
    spec:
      containers:
        - name: baas-event-listener
          image: baas-minikube-event-listener:3.0.2-SNAPSHOT
          imagePullPolicy: Never
          readinessProbe:
            httpGet:
              path: /api/v3/health
              port: 8080
          livenessProbe:
            httpGet:
              path: /api/v3/health
              port: 8080
          ports:
            # akka remoting
            - name: http
              containerPort: 8080
              protocol: TCP
          #namespace
---

apiVersion: v1
kind: Service
metadata:
  name: baas-event-listener-service
  labels:
    baas-component: remote-event-listener
    baker-recipe: "Webshop"
spec:
  selector:
    app: baas-event-listener
  ports:
    - port: 8080
      protocol: TCP
  type: LoadBalancer

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: client-app
  name: client-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-app
  template:
    metadata:
      labels:
        app: client-app
    spec:
      containers:
        - name: client-app
          image: baas-client-example:3.0.2-SNAPSHOT
          imagePullPolicy: Never
          readinessProbe:
            httpGet:
              path: /api
              port: 8082
          livenessProbe:
            httpGet:
              path: /api
              port: 8082
          ports:
            - name: http
              containerPort: 8082
              protocol: TCP
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: baas-state
  name: baas-state
spec:
  replicas: 3
  selector:
    matchLabels:
      app: baas-state
  template:
    metadata:
      labels:
        app: baas-state
        actorSystemName: BaaS
    spec:
      containers:
        - name: baas-state
          image: baas-minikube-state:3.0.2-SNAPSHOT
          imagePullPolicy: Never
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8558
          livenessProbe:
            httpGet:
              path: /health/alive
              port: 8558
          ports:
            # akka remoting
            - name: remoting
              containerPort: 2552
              protocol: TCP
            # akka-management and bootstrap
            - name: management
              containerPort: 8558
              protocol: TCP
            - name: webaccess
              containerPort: 8081
              protocol: TCP
          #namespace
---

apiVersion: v1
kind: Service
metadata:
  name: baas-state-service
  labels:
    run: baas-state-service
spec:
  selector:
    app: baas-state
  ports:
    - port: 8081
      protocol: TCP
  type: LoadBalancer

---

apiVersion: v1
kind: Service
metadata:
  name: client-app-service
  labels:
    run: client-app-service
spec:
  selector:
    app: client-app
  ports:
    - port: 8082
      protocol: TCP
  type: LoadBalancer

# Run this command to expose the service to minikube
# minikube service baas-state-service
